Fix FXML bugs + filter